<resources>
    <string name="app_name">Расписание</string>
    <string name="title_schedule">Расписание</string>
    <string name="monday">Пн</string>
    <string name="tuesday">Вт</string>
    <string name="wednesday">Ср</string>
    <string name="thursday">Чт</string>
    <string name="friday">Пт</string>
    <string name="saturday">Сб</string>

    <string name="add_plan">Добавить предмет</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="add">Добавить</string>
    <string name="enter_name">Введите название</string>
    <string name="enter_all_fields">Заполните все поля!</string>
    <string name="begin">Начало:</string>
    <string name="end">Конец:</string>

</resources>
